univention-management-console-frontend (1.0.57-1) unstable; urgency=low  .    * allow for horizontal scrolling in the main window (Bug #22881)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.0/ucs@27005 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/style.css
+++ b/management/univention-management-console-frontend/css/style.css
@@ -6,7 +6,7 @@ body {
 	font-family: Helvetica, "Helvetica Neue", Arial, Geneva, sans-serif;
 	color: #414142;
 	/* disable scrollbars for the main window, long combo boxes may cause scrollbars to be shown */
-	overflow: hidden;
+	overflow-y: hidden;
 }
 
 a {
